fixed a lot of spacing

--- a/dev/styles/_aboutme.scss
+++ b/dev/styles/_aboutme.scss
@@ -6,23 +6,43 @@
 
 	.about-me-divider {
 		display: flex;
-		justify-content: space-between;
+		justify-content: space-around;
 		align-items: center;
 		
 		.about-me-img {
-			width: 40%;
+			// display: flex;
+			// justify-content: flex-end;
+			width: 30%;
+			min-width: 250px;
+			-webkit-clip-path: polygon(27% 0, 100% 0, 100% 75%, 73% 100%, 0 100%, 0% 25%);
+			clip-path: polygon(27% 0, 100% 0, 100% 75%, 73% 100%, 0 100%, 0% 25%);
+			position: relative;
+			z-index: -9;
+			
 
 			img {
 				box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 				border-radius: 5px;
-				opacity: 0.7;
+				// opacity: 0.7;
 				transition: all 1s;
 				
+				
 
-				&:hover {
-					opacity: 0.8;
-				}
+				// &:hover {
+				// 	opacity: 0.8;
+				// }
 			}
+		}
+
+		.about-me-img::before {
+			position: absolute;
+			  content: '';
+			border: 2px solid $fontgrey;
+			width: 100%;
+			height: 100%;
+			left: 8%;
+			bottom: -8%;
+			z-index: -10;
 		}
 
 		.about-me-text {
@@ -42,9 +62,11 @@
 			}
 
 			.about-me-resume {
+				display: flex;
+				justify-content: center;
 
 				a {
-					font-family: 'Rajdhani', sans-serif;
+					font-family: 'Raleway Dots', sans-serif;
 					font-size: 2.2rem;
 					display: inline-block;
 					padding: 15px 20px;
@@ -61,16 +83,19 @@
 					transform: scale(1.19);
 					box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 					background-color: $teal;
+					color: $fontgrey;
 				}
 			}
 			.about-me-icons {
+				display: flex;
+				justify-content: center;
 				margin-top: 40px;
 				ul {
 					padding: 0;
 
 					li {
 						display: inline-block;
-						padding-right: 20px;
+						padding-left: 20px;
 						a {
 
 							i {
